# Knowledge-Explorer.io

./: .gitignore  README.md
backend/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  logger.py  main.py
backend/app/api/endpoints/: GraphRAGQueryEngine.py  GraphRagExtractor.py  GraphRagStore.py  document.py  gql.py  query.py  rag.py
backend/app/client/: mongoClient.py  mongo_client.py  s3_client.py
backend/app/client/db/: documents_collection.py  index_infos_collection.py  jobs_collection.py  mongo_base.py  queries_collection.py
backend/app/rag/: GraphRAGLocalQueryEngine.py  GraphRAGQueryEngine.py  GraphRagExtractor.py  GraphRagStore.py  StreamingReranker.py  prompts.py
backend/app/types/: DAG.py  stream.py
backend/app/utils/: logging_decorator.py  page_splitter.py
frontend/: .env.development  .env.production  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css  vite-env.d.ts
frontend/src/api/: apollo.ts  query.ts
frontend/src/components/: ChatHistorySelector.jsx  ChatWindow.jsx  FileSystem.jsx  NavSidebar.jsx
frontend/src/components/sidebar/: NavSidebar.jsx  (+3 more)
frontend/src/context/: ChatHistoryContext.tsx  FileSystemContext.tsx  FileViewerContext.tsx  GraphViewContext.tsx  MessageContext.tsx  QueryModeContext.tsx  TabContext.tsx
infra/: deploy.sh  ecs.tf  main.tf  outputs.tf
infra/ansible/playbooks/: backend.yml  site.yml
infra/environments/: terraform.tfvars
(+35 files in other folders)
