[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "boto3>=1.38.13",
    "dnspython>=2.7.0",
    "fastapi>=0.115.12",
    "future>=1.0.0",
    "graspologic>=3.4.1",
    "langchain>=0.3.25",
    "llama-index>=0.12.35",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "llama-index-llms-openai>=0.3.38",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-vector-stores-neo4jvector>=0.3.0",
    "motor>=3.7.0",
    "neo4j>=5.28.1",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.1",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scipy>=1.12.0",
    "strawberry-graphql[fastapi]>=0.268.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]
